--- a/skyscout/src/components/Body/body.css
+++ b/skyscout/src/components/Body/body.css
@@ -1,4 +1,5 @@
 .main-div {
     height: 700px;
-    background-color: rgb(255, 251, 251)81, 136, 136);
+    background-color: black;
+    color: white;
 }
