--- a/skyscout/src/components/Footer/footer.css
+++ b/skyscout/src/components/Footer/footer.css
@@ -1,12 +1,11 @@
 .footer-container {
+    background-color: rgb(45, 42, 42);
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     padding: 20px;
 }
 
-.map-container,
 .form-container {
-    width: 48%;
-    box-sizing: border-box;
+    width: 40%;
 }
