--- a/skyscout/src/components/ContactForm/form.css
+++ b/skyscout/src/components/ContactForm/form.css
@@ -1,14 +1,23 @@
 .contact-form {
     max-width: 350px;
     margin: 0 auto;
+    border-left: #ececec;
+    border-width: 3px;
 }
 
 h2 {
-    color: #ffffff;
+    color: #ececec;
+    font-size: 22px;
+    padding: 5px;
+    text-align: center;
 }
 
 .subheading {
     color: #ffffff;
+    padding: 10px;
+    margin-bottom: 5px;
+    font-size: 13px;
+    text-align: center;
 }
 
 .form-group {
@@ -33,17 +42,27 @@ textarea {
     padding: 8px;
     margin-top: 5px;
     box-sizing: border-box;
-    border: 1px solid #ccc;
+    background-color: rgb(45, 42, 42);
+    border: 1px solid rgb(63, 62, 62);
     border-radius: 4px;
 }
 
+#firstName,
+#lastName,
+#message {
+    color: #ffffff;
+}
+
 button {
+    display: block;
+    margin: 0 auto;
     background-color: #1e1e1e;
     color: white;
     padding: 10px 15px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+
 }
 
 button:hover {
