--- a/skyscout/src/components/Footer/footer.css
+++ b/skyscout/src/components/Footer/footer.css
@@ -1,7 +1,7 @@
 .footer-container {
     background-color: rgb(45, 42, 42);
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     padding: 20px;
 }
