--- a/skyscout/src/components/ContactForm/form.css
+++ b/skyscout/src/components/ContactForm/form.css
@@ -6,10 +6,11 @@
 }
 
 h2 {
-    color: #ececec;
+    color: #ececec !important;
     font-size: 22px;
     padding: 5px;
     text-align: center;
+    text-shadow: 2px 2px black;
 }
 
 .subheading {
@@ -18,6 +19,7 @@ h2 {
     margin-bottom: 5px;
     font-size: 13px;
     text-align: center;
+    text-shadow: 2px 2px black;
 }
 
 .form-group {
@@ -42,7 +44,7 @@ textarea {
     padding: 8px;
     margin-top: 5px;
     box-sizing: border-box;
-    background-color: rgb(45, 42, 42);
+    background-color: rgb(225, 225, 225);
     border: 1px solid rgb(63, 62, 62);
     border-radius: 4px;
 }
@@ -51,21 +53,21 @@ textarea {
 #lastName,
 #email,
 #message {
-    color: #ffffff;
+    color: #050505;
 }
 
 button {
     display: block;
     margin: 0 auto;
-    background-color: #1e1e1e;
-    color: white;
+    background-color: rgb(225, 225, 225);
+    color: rgb(0, 0, 0);
     padding: 10px 15px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-
 }
 
 button:hover {
-    background-color: #141414;
+    background-color: rgb(9, 39, 146);
+    color: white;
 }
